--- a/eu-atollgroup-mifid-web/src/main/webapp/index.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/index.html
@@ -1,27 +1,51 @@
+<!DOCTYPE html>
 <html ng-app="todoApp">
-    <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-        <script src="js/todo.js"></script>
-        <link rel="stylesheet" href="todo.css">
-    </head>
-    <body>
-    <h2>Todo</h2>
-    <div ng-controller="TodoListController as todoList">
-        <span>{{todoList.remaining()}} of {{todoList.todos.length}} remaining</span>
-        [ <a href="" ng-click="todoList.archive()">archive</a> ]
-        <ul class="unstyled">
-            <li ng-repeat="todo in todoList.todos">
-                <label class="checkbox">
-                    <input type="checkbox" ng-model="todo.done">
-                    <span class="done-{{todo.done}}">{{todo.text}}</span>
-                </label>
-            </li>
-        </ul>
-        <form ng-submit="todoList.addTodo()">
-            <input type="text" ng-model="todoList.todoText"  size="30"
-                   placeholder="add new todo here">
-            <input class="btn-primary" type="submit" value="add">
-        </form>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/dropdown.js"></script>
+    <link rel="stylesheet" href="todo.css">
+</head>
+<body>
+
+<h4>Positional</h4>
+<div ng-controller="PopoverDemoCtrl">
+
+    <div class="form-group">
+        <label>Popover placement</label>
+        <select class="form-control" ng-model="placement.selected"
+                ng-options="o as o for o in placement.options"></select>
     </div>
-    </body>
+</div>
+
+<h4>Kérdőívek</h4>
+<div ng-controller="QuestionnarieCtrl">
+    <ul>
+        <li ng-repeat="questionnaire in allQuestionnaires">{{questionnaire.name}}</li>
+    </ul>
+</div>
+
+
+<h2>Todo</h2>
+<div ng-controller="TodoListController as todoList">
+    <span>{{todoList.remaining()}} of {{todoList.todos.length}} remaining</span>
+    [ <a href="" ng-click="todoList.archive()">archive</a> ]
+    <ul class="unstyled">
+        <li ng-repeat="todo in todoList.todos">
+            <label class="checkbox">
+                <input type="checkbox" ng-model="todo.done">
+                <span class="done-{{todo.done}}">{{todo.text}}</span>
+            </label>
+        </li>
+    </ul>
+    <form ng-submit="todoList.addTodo()">
+        <input type="text" ng-model="todoList.todoText" size="30"
+               placeholder="add new todo here">
+        <input class="btn-primary" type="submit" value="add">
+    </form>
+</div>
+</body>
 </html>
